z-index to stop other notes from stacking on top of modal

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -375,6 +375,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
   position: fixed;
   top: 0;
   left: 0;
